--- a/TurnUp/package.json
+++ b/TurnUp/package.json
@@ -7,6 +7,7 @@
     "bundle-android": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output android/app/src/main/assets/index.android.map --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
+    "firebase": "^3.4.1",
     "react": "15.3.2",
     "react-native": "0.33.0"
   }
