--- a/TurnUp/android/app/build.gradle
+++ b/TurnUp/android/app/build.gradle
@@ -139,7 +139,15 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.google.firebase:firebase-core:9.6.1' // firebase
+    compile "com.facebook.android:facebook-android-sdk:[4,5)"
+    compile project(":react-native-fbsdk")
+    compile(project(":react-native-google-signin")){
+        exclude group: "com.google.android.gms" // very important
+    }
+    compile 'com.google.android.gms:play-services-auth:9.2.1' // should be at least 9.0.0
 }
+
+
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
