--- a/TurnUp/android/settings.gradle
+++ b/TurnUp/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'TurnUp'
 
 include ':app'
+include ':react-native-google-signin'
+project(':react-native-google-signin').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-signin/android')
+include ':react-native-fbsdk'
+project(':react-native-fbsdk').projectDir = new File(settingsDir, '../node_modules/react-native-fbsdk/Android')
