--- a/TurnUp/android/app/build.gradle
+++ b/TurnUp/android/app/build.gradle
@@ -91,6 +91,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
+        manifestPlaceholders = [ googleAppAPIKey:keystoreProperties['googleAppAPIKey'] ]
         applicationId "com.turnup"
         minSdkVersion 16
         targetSdkVersion 22
@@ -139,6 +140,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
