--- a/TurnUp/android/app/src/main/AndroidManifest.xml
+++ b/TurnUp/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
       android:theme="@style/AppTheme">
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="${googleAppAPIKey}"/>
 
         <activity
         android:name=".MainActivity"
