--- a/TurnUp/package.json
+++ b/TurnUp/package.json
@@ -10,6 +10,7 @@
     "firebase": "^3.4.1",
     "react": "15.3.2",
     "react-native": "0.33.0",
+    "react-native-contacts": "^0.5.1",
     "react-native-fbsdk": "^0.3.0",
     "react-native-google-signin": "^0.8.1",
     "react-native-maps": "^0.10.1"
