--- a/TurnUp/package.json
+++ b/TurnUp/package.json
@@ -14,6 +14,7 @@
     "react-native-contacts": "^0.5.1",
     "react-native-fbsdk": "^0.3.0",
     "react-native-google-signin": "^0.8.1",
-    "react-native-maps": "^0.10.1"
+    "react-native-maps": "^0.10.1",
+    "shortid": "^2.2.6"
   }
 }
