--- a/TurnUp/ios/TurnUp/Info.plist
+++ b/TurnUp/ios/TurnUp/Info.plist
@@ -64,5 +64,27 @@
 			</dict>
 		</dict>
 	</dict>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb{your-app-id}</string>
+      </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>some-app-id</string>
+  <key>FacebookDisplayName</key>
+  <string>TurnUp</string>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-api</string>
+    <string>fbauth2</string>
+    <string>fbshareextension</string>
+  </array>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Photos are cool</string>
 </dict>
 </plist>
