--- a/TurnUp/package.json
+++ b/TurnUp/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.33.0",
     "react-native-collapsible": "^0.7.0",
     "react-native-contacts": "^0.5.1",
+    "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-fbsdk": "^0.3.0",
     "react-native-google-signin": "^0.8.1",
     "react-native-maps": "^0.10.1",
